[B]2.0.0[/B]

First Add-on version