@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.empflix" name="Empflix" version="2.0.5" provider-name="xbmc-adult">
+<addon id="plugin.video.empflix" name="Empflix" version="2.0.6" provider-name="xbmc-adult">
     <requires>
         <import addon="xbmc.python" version="1.0"/>
     </requires>
