@@ -1,3 +1,7 @@
+[B]2.0.6[/B]
+
+Fix video url regex
+
 [B]2.0.0[/B]
 
 First Add-on version
